fix: spacing blockquote

--- a/assets/css/modules/_formatted.scss
+++ b/assets/css/modules/_formatted.scss
@@ -69,7 +69,8 @@
 
   p,
   ul,
-  ol {
+  ol,
+  blockquote {
     margin-top: 1rem;
     margin-bottom: 30px;
   }
